--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.14.0",
     "init": "^0.1.2",
     "morgan": "^1.7.0",
+    "node-sass": "^3.8.0",
     "nodemon": "^1.10.0",
     "sequelize": "^3.24.0",
     "swig": "^1.4.2"
@@ -17,8 +18,11 @@
     "nodemon": "^1.10.0"
   },
   "scripts": {
-    "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:production": "node app",
+    "start:dev": "nodemon -e html,css,js app",
+    "start": "npm run start:dev",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-css": "node-sass -w -r assets/stylesheets -o public/stylesheets"
   },
   "repository": {
     "type": "git",
